Added Nginx service and tested. Working ok

--- a/compose.yaml
+++ b/compose.yaml
@@ -56,6 +56,16 @@ services:
       db:
         condition: service_healthy
 
+  
+  nginx:
+    image: nginx
+    restart: unless-stopped
+    ports: 
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - server
         
 volumes:
   db-data:
