Update for to helm charts to use images loaded to minikube from docker

--- a/flask-chart/templates/service.yaml
+++ b/flask-chart/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-flask-service
+  name: {{ include "myapp.fullname" . }}
 spec:
   type: {{ .Values.service.type }}
+  selector:
+    app: {{ include "myapp.name" . }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
-  selector:
-    app: {{ .Release.Name }}-flask
