--- a/flask-chart/values.yaml
+++ b/flask-chart/values.yaml
@@ -64,7 +64,7 @@ nginx:
 
         location / {
             proxy_pass http://microserver;
-            proxy_set_header Host v$host;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
