--- a/flask-chart/chart.yaml
+++ b/flask-chart/chart.yaml
@@ -7,8 +7,8 @@ appVersion: "1.0"
 
 dependencies:
   - name: postgresql
-    version: latest #15.5.17
+    version: 16.7.21
     repository: "https://charts.bitnami.com/bitnami"
   - name: nginx
-    version: latest #15.16.0
+    version: 21.0.8
     repository: "https://charts.bitnami.com/bitnami"
