--- a/compose.yaml
+++ b/compose.yaml
@@ -13,7 +13,13 @@ services:
       context: .
     ports:
       - 5000:5000
-
+    env_file : .env
+    restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
